// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slide toggle: should render a checked state 1`] = `
<div
  className="root"
>
  <input
    aria-label="Test toggle"
    checked={true}
    className="input"
    id="testToggle"
    type="checkbox"
  />
  <label
    className="switch"
    htmlFor="testToggle"
  >
    <div
      className="slider"
    >
      <TickIcon
        className="slideButton"
        svgClassName="svg"
      />
    </div>
    <span
      className="labelText labelRight"
    >
      Test toggle
    </span>
  </label>
</div>
`;

exports[`Slide toggle: should render with default props 1`] = `
<div
  className="root"
>
  <input
    aria-label="Test toggle"
    className="input"
    id="testToggle"
    type="checkbox"
  />
  <label
    className="switch"
    htmlFor="testToggle"
  >
    <div
      className="slider"
    >
      <TickIcon
        className="slideButton"
        svgClassName="svg"
      />
    </div>
    <span
      className="labelText labelRight"
    >
      Test toggle
    </span>
  </label>
</div>
`;

exports[`Slide toggle: should render with the label hidden 1`] = `
<div
  className="root"
>
  <input
    aria-label="Test toggle"
    className="input"
    id="testToggle"
    type="checkbox"
  />
  <label
    className="switch"
    htmlFor="testToggle"
  >
    <div
      className="slider"
    >
      <TickIcon
        className="slideButton"
        svgClassName="svg"
      />
    </div>
  </label>
</div>
`;

exports[`Slide toggle: should render with the label on the left 1`] = `
<div
  className="root"
>
  <input
    aria-label="Test toggle"
    className="input inputLeft"
    id="testToggle"
    type="checkbox"
  />
  <label
    className="switch"
    htmlFor="testToggle"
  >
    <span
      className="labelText labelLeft"
    >
      Test toggle
    </span>
    <div
      className="slider"
    >
      <TickIcon
        className="slideButton"
        svgClassName="svg"
      />
    </div>
  </label>
</div>
`;
